After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 701234 - SIGSEGV in videoconvert_convert_free when using fastpath
SIGSEGV in videoconvert_convert_free when using fastpath
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.1.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-05-30 02:13 UTC by Philip Craig
Modified: 2013-05-30 03:29 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Philip Craig 2013-05-30 02:13:09 UTC
Run:
gst-launch-1.0 -v videotestsrc ! "video/x-raw,format=I420" ! videoconvert ! "video/x-raw,format=YUY2" ! fakesink
then press Ctrl-C, and a SIGSEGV occurs.

The problem is that convert->tmplines is not allocated for the fastpath. Introduced in 7b8ff707b6ac3670cc92a1f708ebc2523508c141
Comment 1 Wim Taymans 2013-05-30 03:29:40 UTC
commit 00bbca2f9f1b4221bfea980740403c4f4a5d6b2a
Author: Wim Taymans <wim.taymans@collabora.co.uk>
Date:   Thu May 30 05:24:32 2013 +0200

    videoconvert: free tmplines correctly
    
    Keep track of how many tmplines we allocated and use that to free the
    correct amount of lines.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=701234